--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,18 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>2.2.4.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <relativePath/>
   </parent>
   <groupId>com.party</groupId>
   <artifactId>neuron</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>neuron</name>
-  <description>Demo project for Spring Boot</description>
+  <description>Simple Neural Network</description>
 
   <properties>
     <java.version>1.8</java.version>
+    <guava.version>24.0-jre</guava.version>
+    <math3.version>3.6.1</math3.version>
   </properties>
 
   <dependencies>
@@ -27,12 +29,12 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>3.6.1</version>
+      <version>${math3.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>24.0-jre</version>
+      <version>${guava.version}</version>
     </dependency>
 
     <dependency>
